Basic img styles to avoid skewing/distorting

--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ body {
     box-sizing: border-box;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 /***************************************
 Headers
 ***************************************/
